Updated DAST needs to test Only

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -27,7 +27,7 @@ jobs:
           path: junit/test-results.xml
 
   dast:
-    needs: [test, sonarqube]
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
