--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -26,8 +26,8 @@ jobs:
           name: test-results
           path: junit/test-results.xml
 
-  dast:
-    needs: [test]
+dast:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
