modified build sbom

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -116,7 +116,8 @@ jobs:
        path: sonarqube-report.json
 
   build:
-      needs: sonarqube
+      needs: []
+      if: true
       runs-on: ubuntu-latest
       steps:
         -
@@ -135,6 +136,8 @@ jobs:
           name: Build and push
           uses: docker/build-push-action@v5
           with:
+            sbom: true
+            provenance: true
             push: true
             tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
 
