--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -154,7 +154,7 @@ jobs:
 
   submit_results:
     needs: [build]
-    if: true
+    if: false
     runs-on: ubuntu-latest
     steps:
     - uses: azure/login@v1
