--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
           GITHUB_ISSUER: https://token.actions.githubusercontent.com
-          CERT_IDENTITY_REGEXP: https://github.com/.*/IATD-lab/.github/workflows/ci-pipeline.yml.*
+          CERT_IDENTITY_REGEXP: https://github.com/.*/DevSecOpsx/IATD-lab/.github/workflows/ci-pipeline.yml.*
         run: |
           cosign verify $IMAGE  --certificate-identity-regexp $CERT_IDENTITY_REGEXP  --certificate-oidc-issuer $GITHUB_ISSUER
 
