--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -190,8 +190,10 @@ jobs:
         path: ${{github.workspace}}
     - name: Upload reports
       env:
-       SUBMIT_USER: ${{ secrets.SUBMIT_USER }}
-       SUBMIT_PASS: ${{ secrets.SUBMIT_PASS }}
+       # SUBMIT_USER: ${{ secrets.SUBMIT_USER }}
+       # SUBMIT_PASS: ${{ secrets.SUBMIT_PASS }}
+       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+       AZURE_ACCESS_TOKEN: ${{ steps.token-gen.outputs.azureAccessToken }}       
       run: |
          WEEK1_CONTAINER=$(curl -X POST -H "Authorization: Bearer $AZURE_ACCESS_TOKEN" -d "$DOCKERHUB_USERNAME/devops-labs" https://devsecops-ver.azurewebsites.net/api/week1-container)
          echo "Week1 container upload: $WEEK1_CONTAINER"
